Instrucciones para JavaFX